{{$NEXT}}

0.29 -- Mon May 24 18:27:46 ADT 2021

  * Release Version no changes from 0.28
  * Increment Version in Makefile.PL

0.28 -- Sun May 23 18:03:47 ADT 2021

  * Add github actions for repo testing and add new maintainer [Timothy Legge]
  * typo fix [Adam Leskis]
  * Fix test failures under Perl 5.26+ without '.' in @INC [Kent Fredric (KENTNL)]
  * Correct a typo - SYNOPSIS [Shlomi Fish]
  * unsafe decoding CVE-2013-7488 [Dana Jacobsen]
  * Typo fixes from dsteinbrunner [David Steinbrunner]
  * Add files via upload [Peter Sylvester]

0.27 -- Wed Jun 25 13:47:28 CDT 2014
  * Avoid recursion when encountering an invalid tag and length
  * Avoid negative repetition counts (5.22 compatibility) [Alex Vandiver]
  * Use pack/unpack instead of chr/org to avoid encoding issues

0.26 -- Sat Jun 09 13:30:16 CDT 2012
  * Avoid Modification of a read-only value attempted errors
  * dump Data::Dumper strings when rtest fails
  * Add tests from Crypt::X509 that found the last Modification of a read-only value attempted error

0.25 -- Fri Jun 08 19:31:59 CDT 2012
  * fix a spelling mistake [gregor herrmann]
  * Add use strict and fix errors
  * Fix decoding of indefinite sequences with ANY
  * POD additions for ANY
  * EXPLICIT ops must pass their cVAR to their child op
  * Swallow a , after a }

0.24 -- Mon Jun 04 17:11:08 CDT 2012
  * spelling fix [gregor herrmann]
  * Added tests for extension markers (fails currently) [Niels Laukens]
  * Bugfix for extension markerss in SETs and CHOICEs [Niels Laukens]
  * Skip attempting to encode opEXTENSIONS inside of CHOICE
  * Support for default explicit tagging [Peter Mogensen]
  * Added tests and doc for explicit tagging [Peter Mogensen]
  * Add new opEXPLICIT for sequences that are inserted for EXPLICIT tags

0.23 -- Thu May 03 16:32:46 CDT 2012
 * Added support for EXTENSION MARKERS (...) (Niels Laukens)
 * Switch to Dist::Zilla for building

Convert::ASN1 0.21 -- Mon Sep 15 14:34:45 CDT 2008

Bug Fixes