@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+  * Fixes #43 - Perl 5.35.1 makes scalar assignment to undef a compile time error
+
 0.29 -- Mon May 24 18:27:46 ADT 2021
 
   * Release Version no changes from 0.28
